LLMモデルをBedrockからFastAPI経由に変更

--- a/README-UT20250423.md
+++ b/README-UT20250423.md
@@ -57,9 +57,26 @@ sudo npm install -g aws-cdk@latest
 
 ```bash
 cd /tmp/testdir/
-git clone https://github.com/keisskaws/simplechat.git
+git clone https://github.com/hashk1/simplechat.git
 cd simplechat
 
+```
+
+### 2-1. エンドポイントの設定
+FastAPIで作成したエンドポイントを設定する
+- `.env_template`の`ENDPOINT_URL`にエンドポイントURLを入力する
+```bash
+vi lambda/.env_template
+```
+
+```bash
+# 注意：クォーテーション「'」やダブルクォーテーション「"」で囲まないこと
+ENDPOINT_URL=ここにエンドポイントURLを入力する
+```
+
+- `.env_template`を`.env`に変更する
+```bash
+mv lambda/.env_template lambda/.env`
 ```
 
 ### 3. CDK プロジェクトの依存関係 && フロントエンドのビルド
