--- a/README-UT20250423.md
+++ b/README-UT20250423.md
@@ -69,6 +69,7 @@ FastAPIで作成したエンドポイントを設定する
 vi lambda/.env_template
 ```
 
+ファイルの中身
 ```bash
 # 注意：クォーテーション「'」やダブルクォーテーション「"」で囲まないこと
 ENDPOINT_URL=ここにエンドポイントURLを入力する
