--- a/README-UT20250423.md
+++ b/README-UT20250423.md
@@ -77,7 +77,7 @@ ENDPOINT_URL=ここにエンドポイントURLを入力する
 
 - `.env_template`を`.env`に変更する
 ```bash
-mv lambda/.env_template lambda/.env`
+mv lambda/.env_template lambda/.env
 ```
 
 ### 3. CDK プロジェクトの依存関係 && フロントエンドのビルド
